crates/batuta-tui/tests/snapshots/panels_runs__runs_populated_120x40.snap
---
source: crates/batuta-tui/tests/panels_runs.rs
expression: "render(&model, 120, 40)"
---
"batuta · ws: workspace ▾ · daemon running · 0 attention                                                                 "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                                           "
"┌[1] Sessions · batuta─────────────────────────┐┌[4] Detail────────────────────────────────────────────────────────────┐"
"│no sessions — press n to start one            ││select a session or run                                               │"
"└──────────────────────────────────────────────┘│                                                                      │"
"┌[2] Deliver runs · batuta-deliver─────────────┐│                                                                      │"
"│> ● rent1234 batuta-deliver  0s               ││                                                                      │"
"│    ✓ hild5678 implement-tasks  0s            ││                                                                      │"
"│live 1 · done 1 · failed 0                    ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘│                                                                      │"
"┌[3] Attention (0)─────────────────────────────┐│                                                                      │"
"│nothing needs attention                       ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"1-4 focus  Tab/Shift+Tab next/previous  w workspace  L logs  ?/F1 help  q/Ctrl+C quit  j/k/↑/↓/PgUp/PgDn/g/G move  Enter"
